--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,9 +60,72 @@ header{
 
 // article
 article{
-
+> div{
+  padding:$basic * 10 0;
+  width:$content;
+  @include margin;
+  h3{
+    margin-bottom:$basic * 8;
+    @include center;
+    font-size:$basic * 4;
+    color:$darken;
+  }
+}
 }
 
-.btn{}
+.btn{
+  position:relative;
+  @include layout;
+  p.left{
+    font-size:$small;
+    color:$color;
+  }
+  p.right{
+    width:200px;
+    padding:$small 0;
+    @include layout($start:center);
+    @include border;
+    border-radius:18px;
+    font-size:$small;
+    box-sizing:border-box;
+    color:$color;
+    > i{
+      padding-left:$basic;
+    }
+  }
+  ul{
+    position:absolute;
+    right:0; top:$basic*4;
+    display:none;
+    width:200px;
+    line-height:25px;
+    font-size:$small;
+    color:$color;
+    @include center;
+    @include border($width:$color);
+    border-bottom:none;
+    li{
+      border-bottom:1px solid $color;
+      font-size:$small;
+      color:$color;
+      line-height:25px;
+      @include center;
+    }
+  }
+}
 
-.gallery{}
+.gallery{
+  width:$content;
+  @include margin;
+  @include layout($wrap:wrap);
+  figure{
+    img{}
+  }
+  dl{
+    dt{}
+    dd{
+      &:nth-child(2){}
+      &:nth-child(3){}
+    }
+  }
+}
