--- a/css/content.css
+++ b/css/content.css
@@ -91,10 +91,12 @@ margin-bottom:25px;
 }
 .gallery dl>dd:nth-child(2)>del{
   color:#888888;
-  margin: 0 10px;}
+  margin: 0 10px;
+}
 .gallery dl>dd:nth-child(3){
   display:flex;
-  justify-content: space-between;}
+  justify-content: space-between;
+}
 .gallery dl>dd:nth-child(3)>button{
   display:flex;
   justify-content: center;
